--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sanity/client": "^6.17.2",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.40.0",
+    "aos": "^2.3.4",
     "framer-motion": "^11.1.8",
     "mongoose": "^8.3.3",
     "next": "14.2.3",
