--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-sanity": "^9.0.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.2.0",
     "sharp": "^0.33.3",
