--- a/package.json
+++ b/package.json
@@ -10,23 +10,29 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@material-tailwind/html": "^2.2.5",
     "@material-tailwind/react": "^2.1.9",
     "@portabletext/react": "^3.0.18",
     "@sanity/client": "^6.17.2",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.40.0",
     "aos": "^2.3.4",
+    "babel-preset-es2015": "^6.24.1",
+    "file-loader": "^6.2.0",
     "framer-motion": "^11.1.8",
     "mongoose": "^8.3.3",
     "next": "14.2.3",
     "next-sanity": "^9.0.14",
+    "next-video": "^1.1.4",
+    "next-videos": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.2.0",
     "sharp": "^0.33.3",
-    "typewriter-effect": "^2.21.0"
+    "typewriter-effect": "^2.21.0",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "eslint": "^8",
