--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^4.3.3",
     "@material-tailwind/html": "^2.2.5",
     "@material-tailwind/react": "^2.1.9",
+    "@next/third-parties": "^14.2.8",
     "@portabletext/react": "^3.0.18",
     "@sanity/client": "^6.17.2",
     "@sanity/image-url": "^1.0.2",
@@ -20,8 +21,7 @@
     "babel-preset-es2015": "^6.24.1",
     "file-loader": "^6.2.0",
     "framer-motion": "^11.1.8",
-  
-    "next": "14.2.3",
+    "next": "^14.2.8",
     "next-sanity": "^9.0.14",
     "next-video": "^1.1.4",
     "next-videos": "^1.4.1",
