--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-icons": "^5.2.0",
     "sharp": "^0.33.3",
     "typewriter-effect": "^2.21.0",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "vercel": "^46.0.5"
   },
   "devDependencies": {
     "eslint": "^8",
