--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-es2015": "^6.24.1",
     "file-loader": "^6.2.0",
     "framer-motion": "^11.1.8",
+    "git": "^0.1.5",
     "next": "^14.2.8",
     "next-sanity": "^9.0.14",
     "next-video": "^1.1.4",
